--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 </div>
             </div>
             <div class="glass-card p-4">
-                <h3 class="text-[10px] font-black text-gray-400 uppercase tracking-widest mb-2">Daily Status Distribution</h3>
-                <canvas id="attendanceChart" height="180"></canvas>
+                <h3 class="text-[10px] font-black text-gray-400 uppercase tracking-widest mb-1">Daily Status Distribution</h3>
+                <canvas id="attendanceChart" height="160"></canvas>
             </div>
             <div class="glass-card flex-1 flex flex-col min-h-[400px]">
                 <div class="p-5 border-b border-gray-50 flex justify-between items-center">
@@ -510,9 +510,15 @@
                         labels: { 
                             usePointStyle: true, 
                             font: { weight: 'bold', size: 10 },
-                            padding: 20
+                            padding: 10,
+                            boxWidth: 10
                         } 
                     } 
+                },
+                layout: {
+                    padding: {
+                        bottom: 0
+                    }
                 },
                 responsive: true,
                 maintainAspectRatio: false
@@ -710,15 +716,18 @@
         
         auth.onAuthStateChanged(async (user) => {
             const loginModal = document.getElementById('adminLoginModal');
-            if (user) {
-                const snap = await db.ref('employees').orderByChild('email').equalTo(user.email.toLowerCase()).once('value');
-                let isAdminUser = false;
-                snap.forEach(child => { if (child.val().isAdmin === true) isAdminUser = true; });
-                if (!isAdminUser) await auth.signOut();
-            }
-            // Only show login modal if no user is logged in
             if (!user && loginModal.classList.contains('opacity-0')) {
                 toggleModal('adminLoginModal');
+            } else if (user) {
+                // Check if user is admin, if not sign them out
+                const snap = await db.ref('employees').orderByChild('email').equalTo(user.email.toLowerCase()).once('value');
+                let isAdminUser = false;
+                snap.forEach(child => {
+                    if (child.val().isAdmin === true) isAdminUser = true;
+                });
+                if (!isAdminUser) {
+                    await auth.signOut();
+                }
             }
         });
         
