--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                     <h2 class="text-3xl font-black text-gray-800" id="presentToday">0</h2>
                 </div>
             </div>
-            <div class="glass-card p-4">
+            <div class="glass-card p-3">
                 <h3 class="text-[10px] font-black text-gray-400 uppercase tracking-widest mb-1">Daily Status Distribution</h3>
-                <canvas id="attendanceChart" height="160"></canvas>
+                <div class="relative" style="height: 140px;">
+                    <canvas id="attendanceChart"></canvas>
+                </div>
             </div>
             <div class="glass-card flex-1 flex flex-col min-h-[400px]">
                 <div class="p-5 border-b border-gray-50 flex justify-between items-center">
@@ -506,19 +508,17 @@
                 plugins: { 
                     legend: { 
                         display: true, 
-                        position: 'bottom', 
+                        position: 'right', 
                         labels: { 
                             usePointStyle: true, 
-                            font: { weight: 'bold', size: 10 },
-                            padding: 10,
-                            boxWidth: 10
+                            font: { weight: 'bold', size: 9 },
+                            padding: 8,
+                            boxWidth: 8
                         } 
                     } 
                 },
                 layout: {
-                    padding: {
-                        bottom: 0
-                    }
+                    padding: 0
                 },
                 responsive: true,
                 maintainAspectRatio: false
